k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-svc
spec:
  selector:
    app: devsecops-app
  ports:
  - port: 3000
    targetPort: 3000
  type: NodePort
